# CoderManager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 20260719_0001_create_applications.py  20260719_0002_add_application_created_at.py  20260719_0003_create_instances.py  20260719_0004_add_application_whitelist.py  20260719_0005_add_members_and_updated_at.py  20260719_0006_create_templates.py  20260719_0007_create_template_images_and_workspaces.py  20260719_0008_create_database_pool.py  20260719_0009_add_argocd_application_name.py  20260720_0010_create_instance_kubernetes.py  20260720_0011_create_job_executions.py  20260722_0012_remove_internal_applications.py  20260723_0001_initial_schema.py  20260724_0001_initial_schema.py  20260724_0002_template_branch_synchronization.py  20260724_0003_rename_template_names.py  43eaaba4c3ce_add_instance_slugs.py  fefe7966cbab_add_instance_admin_password.py
src/coder_manager/: __init__.py  celery_app.py  config.py  crypto.py  database.py  main.py  worker_database.py
src/coder_manager/api/: router.py
tests/: __init__.py  conftest.py  test_application_migration.py  test_applications.py  test_argocd.py  test_coder.py  test_database_concurrency.py  test_databases.py  test_documentation.py  test_instance_kubernetes.py  test_instances.py  test_members.py  test_tasks.py  test_template_source.py  test_template_sync.py  test_templates.py  test_worker_database.py  test_workspace_route_errors.py  test_workspaces.py
(+108 files in other folders)
