[project]
name = "coder-manager"
version = "0.1.0"
description = "API and background workers for managing Coder infrastructure"
readme = "README.md"
authors = [
    { name = "Thomas ILLIET", email = "contact@thomas-illiet.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "cryptography>=48.0.1,<49.0.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
coder-manager = "coder_manager.main:run"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.pytest.ini_options]
addopts = "--cov=coder_manager --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/coder_manager"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"migrations/**/*.py" = ["INP001"]
"tests/**/*.py" = ["ANN", "PLR2004", "S101"]

[tool.ty.environment]
python-version = "3.13"
